[gd_scene load_steps=4 format=2]

[ext_resource path="res://debris/debris.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/debris/debris_6.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.009, 9.65064 )

[node name="debris" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.72385, 1.32295 )

[connection signal="body_entered" from="." to="." method="_on_debris_body_entered"]
[connection signal="hit_by_projectile" from="." to="." method="_on_debris_hit_by_projectile"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
